--- a/project/OurForum/wwwroot/index.html
+++ b/project/OurForum/wwwroot/index.html
@@ -76,9 +76,11 @@
     <div class="links">
         <a href="#" class="link scroll-header">Home</a>
         <a target="_blank" href="https://github.com/Treeeps5" class="link">GitHub1</a>
-		<a target="_blank" href="https://github.com/PurpleD9" class="link">GitHub2</a>
+	<a target="_blank" href="https://github.com/PurpleD9" class="link">GitHub2</a>
+	<a target="_blank" href="https://github.com/lneOldBoyl" class="link">GitHub3</a>
         <p class="link">zapisochnyi.vitalii1622@vu.cdu.edu.ua</p>
-		<p class="link">kochmar.david1622@vu.cdu.edu.ua</p>
+	<p class="link">kochmar.david1622@vu.cdu.edu.ua</p>
+	<p class="link">movchan.vasyl1622@vu.cdu.edu.ua</p>
 		
     </div>
     <div class="mark">
